My ansible user setup, ensuring a group for the user and a user.

--- a/pkgupdates.yaml
+++ b/pkgupdates.yaml
@@ -1,4 +1,8 @@
 ---
+
+#Core packages that must be at the latest code, barring some conflict or
+#other restriction.
+
 - name: Update openssl
   package: name=openssl state=latest
 
